# race_float

race_float/: package.xml
race_float_bringup/: CMakeLists.txt  package.xml
race_float_bringup/config/: mvp_c2.yaml  mvp_gui_params.yaml
race_float_bringup/config/localization/: robot_initialization.yaml  robot_localization.yaml
race_float_bringup/config/sensor/: bluerobotics_bar30.yaml  gpio_manager.yaml  power_monitor.yaml  pwm_driver.yaml  vectornav_vn300.yaml
race_float_bringup/launch/: bringup_gui.launch.py  bringup_localization.launch.py  bringup_sensors.launch.py  bringup_topside_c2.launch.py  bringup_utilities.launch.py  bringup_vehicle_c2.launch.py
race_float_bringup/launch/include/: bluerobotics_bar30.launch.py  computer_monitor.launch.py  description.launch.py  foxglove_bridge_launch.xml  gpio_manager.launch.py  initialization.launch.py  localization.launch.py  mvp_c2_topside.launch.py  mvp_c2_vehicle.launch.py  power_monitor.launch.py  usbl.launch.py  vectornav.launch.py
race_float_config/: CMakeLists.txt  package.xml
race_float_description/: CMakeLists.txt  package.xml
race_float_description/urdf/: base.urdf
