<?xml version="1.0"?>
<package format="2">
  <name>race_float</name>
  <version>0.0.0</version>
  <description>The race_float package</description>

  <maintainer email="yweifu@uri.edu">Yuewei Fu</maintainer>
  <author email="yweifu@uri.edu">Yuewei Fu</author>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>

  </export>
</package>