<?xml version="1.0"?>
<package format="2">
  <name>race_float_config</name>
  <version>0.0.0</version>
  <description>The race_float_config package</description>

  <maintainer email="yweifu@uri.edu">Yuewei Fu</maintainer>
  <author email="yweifu@uri.edu">Yuewei Fu</author>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>